--- a/config/settings.yml
+++ b/config/settings.yml
@@ -4,3 +4,4 @@ nhatlink: "#"
 nguyenlink: "https://www.facebook.com/thaonguyen.tran.7311352"
 rubyrailslink: "http://www.railstutorial.org/"
 nothing: "#"
+remember_me: "1"
